fixing overlapping sections

--- a/css/style.css
+++ b/css/style.css
@@ -70,14 +70,14 @@ h4{
 
 .skills {
 	width: 90%;
-	height: 100%;
+	height: 300px;
 }
 .left {
 	float: left;
 	width: 50%;
 	text-align: center;
 	margin: 0;
-	padding: 10;
+	padding: 0;
 	background-color: #E8F6F3;
 	border: 2px solid black;
   border-radius: 15px
@@ -88,7 +88,7 @@ h4{
 	width: 50%;
 	text-align: center;
 	margin: 0;
-	padding: 10px;
+	padding: 0;
 	background-color: #E8F6F3;
 	border: 2px solid black;
   border-radius: 15px
@@ -100,7 +100,10 @@ h4{
 	border: 2px solid black;
   border-radius: 15px
 }
-
+.experience {
+	width: 100%;
+	height: 500px;
+}
 .apple,
 .plexus,
 .dcc {
@@ -119,6 +122,14 @@ h4{
   border-radius: 15px
 }
 
+.projects{
+	width: 100%;
+	height: 300px;
+}
+.volunteer {
+	width: 100%;
+	height: 300px;
+}
 .exposure img,
 .cad img,
 .product img {
